fix: hide scrollbar in Chrome and Firefox

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -78,3 +78,12 @@ body {
   font-family: "Geist_Mono", Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari and Opera */
+}
